feat:conexion con la BD.

--- a/gestionador-backend-spring/src/main/resources/application.properties
+++ b/gestionador-backend-spring/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=gestionador-backend-spring
+security.jwt.secret-key=mySuperSecretKeyThatIsAtLeast32CharsLong!
+
+# Conexión a Base de Datos
+spring.sql.init.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/gestionador
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+
