feat: agregar entidades del dominio para el sistema POS de vendedores y registro y login del usuario.

--- a/gestionador-backend-spring/src/main/resources/application.properties
+++ b/gestionador-backend-spring/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=gestionador-backend-spring
-security.jwt.secret-key=mySuperSecretKeyThatIsAtLeast32CharsLong!
+security.jwt.secret-key=${SECRET}
 
 # Conexión a Base de Datos
 spring.sql.init.platform=postgres
@@ -7,5 +7,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/gestionador
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
