--- a/gestionador-backend-spring/build.gradle
+++ b/gestionador-backend-spring/build.gradle
@@ -32,8 +32,13 @@ dependencies {
 	runtimeOnly("io.jsonwebtoken:jjwt-impl:0.11.5")
 	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson
 	runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.11.5")
-
+	// https://mvnrepository.com/artifact/org.projectlombok/lombok
+	implementation("org.projectlombok:lombok:1.18.30")
+   
+    implementation 'io.github.cdimascio:java-dotenv:5.2.2'
 }
+
+
 
 tasks.named('test') {
 	useJUnitPlatform()
