--- a/gestionador-backend-spring/build.gradle
+++ b/gestionador-backend-spring/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.3.12'
+	id 'org.springframework.boot' version '3.3.13'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
@@ -32,8 +32,9 @@ dependencies {
 	runtimeOnly("io.jsonwebtoken:jjwt-impl:0.11.5")
 	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-jackson
 	runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.11.5")
-	// https://mvnrepository.com/artifact/org.projectlombok/lombok
-	implementation("org.projectlombok:lombok:1.18.30")
+	// https://mvnrepository.com/artifact/org.projectlombok/lombok - Annotation processor must be declared separately
+	compileOnly 'org.projectlombok:lombok:1.18.34'
+	annotationProcessor 'org.projectlombok:lombok:1.18.34'
    
     implementation 'io.github.cdimascio:java-dotenv:5.2.2'
 }
